--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-<h1>Nikhil Sonu</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        .container {
+            width: 80%;
+            max-width: 900px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            margin: 10px 0;
+        }
+        header p {
+            font-size: 1.2rem;
+            color: #666;
+        }
+        .portfolio-item {
+            margin-bottom: 30px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #ddd;
+        }
+        .portfolio-item:last-child {
+            border-bottom: none;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+        .portfolio-item h3 {
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
+        .portfolio-item p {
+            color: #666;
+            font-size: 1.1rem;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <header>
+        <h1>John Doe</h1>
+        <p>Web Developer | Freelancer</p>
+    </header>
+
+    <section class="portfolio">
+        <div class="portfolio-item">
+            <h3>Project 1</h3>
+            <p>Description of project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <h3>Project 2</h3>
+            <p>Description of project 2. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+
+        <div class="portfolio-item">
+            <h3>Project 3</h3>
+            <p>Description of project 3. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+</div>
+
+</body>
+</html>
